test/types/file/unableToOpenFile.chpl
var f = open(filename, "r");

f.open();
f.close();
